Authentication and profile dropdown done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,7 +20,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #06c; /* Change to your preferred underline color */
+  background-color: #30c47e; /* Change to your preferred underline color */
   transform: scaleX(0);
   transform-origin: bottom left;
   transition: transform 0.3s ease-in-out;
